# derek

./: README.md
derek/: Cargo.toml  pyproject.toml
derek/derek/: main.py  sync.py
derek/src/: main.rs
